<resources>
    <string name="app_name">My Books</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="spinner_book_type">
        <item>Romance</item>
        <item>Horror</item>
    </string-array>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail_favorite">DetailFavoriteActivity</string>
    <string name="signed_in_fmt">Signed in as: %s</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_email_password">Email/Password Authentication</string>
    <string name="desc_email_password">Use an email and password to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="email_password_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="email_password_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebase_ui_status_fmt">Firebase User: %s</string>
    <string name="firebase_ui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string name="imageview">imageview</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="don_t_have_account_signup_here">Don\'t have account? Sign up here</string>
    <string name="book_type">Book Type</string>
    <string name="category_hint">1 = Horror, 2 = Romance</string>
    <string name="title">Title</string>
    <string name="publish_year">Publish Year</string>
    <string name="author">Author</string>
    <string name="price">Price</string>
    <string name="word_count">Word Count</string>
    <string name="synopsis">Synopsis</string>
    <string name="full_story">Full Story</string>
    <string name="image_link">Image Link:</string>
    <string name="add_book">Add Book</string>
    <string name="already_sign_up_sign_in_here">Already Sign up? Sign in here</string>
    <string name="about">About</string>
    <string name="about_detail">Welcome to My Books, feel free to use this application.</string>
    <string name="choose_book_type">Choose Book Type</string>
    <string name="search_book">Search Book</string>
    <string name="image_book">image_book</string>
    <string name="book_title">Title book</string>
    <string name="story">Story</string>
    <string name="the_story">The story are</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="about_fragment">About</string>

</resources>
