<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/img_vertical_margin"
    android:orientation="vertical"
    tools:context="com.mulyani.mybooks.View.Admin.InputBookActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_type"
                android:textColor="#000"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/book_type"
                android:lines="1"
                android:inputType="number"
                android:hint="@string/category_hint"
                android:autofillHints="Book category" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="#000"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/book_title"
                android:autofillHints="Input book title"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish_year"
                android:textColor="#000"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/book_year"
                android:autofillHints="publish year" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textColor="#000"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/book_author"
                android:autofillHints="author"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="#000"/>

            <EditText
                android:id="@+id/book_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="price"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word_count"
                android:textColor="#000"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/word_counts"
                android:autofillHints="word count" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/synopsis"
                android:textColor="#000"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="start"
                android:id="@+id/book_synopsis"
                android:autofillHints="synopsis"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_story"
                android:textColor="#000"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="start"
                android:id="@+id/book_contents"
                android:autofillHints="full story"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/image_link"
                    android:textColor="#000"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/book_image"
                    android:autofillHints="image link:"
                    android:inputType="text" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_book"
        android:id="@+id/addButton"
        />
</LinearLayout>
