<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:id="@+id/image_cerpen"
        android:contentDescription="@string/image_book" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_weight="1"
                android:textColor="#000"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/judul_fav"
                android:layout_weight="6"
                android:text="@string/book_title"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/story"
                android:layout_weight="1"
                android:textColor="#000"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fulltext"
            android:lines="2"
            android:text="@string/the_story"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

</LinearLayout>