<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mulyani.mybooks.View.Authentication.RegistrationActivity"
    android:gravity="center">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/sign_up"
        android:textColor="#000000"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="#9575CD"
            android:hint="@string/email"
            android:textSize="20sp"
            android:autofillHints="Email" />

        <View
            android:layout_width="match_parent"
            android:layout_height="25dp"/>

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="#9575CD"
            android:hint="@string/password"
            android:textSize="20sp"
            android:autofillHints="Password" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#9575CD"
        android:text="@string/sign_up"
        android:textColor="#000"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/sign_in_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/already_sign_up_sign_in_here"
        android:textAlignment="center" />

</LinearLayout>
