<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="85dp"
                android:id="@+id/book_image_view"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="100dp"
                android:id="@+id/book_price_view"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_image_view"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="16dp" />

            <!--Layout Text Template-->
            <TextView
                android:id="@+id/book_type_view"
                android:layout_toRightOf="@+id/book_image_view"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_type"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/book_year_view"
                android:layout_toRightOf="@+id/book_image_view"
                android:layout_below="@+id/book_type_view"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish_year"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/book_synopsis_view"
                android:layout_toRightOf="@+id/book_image_view"
                android:layout_below="@id/book_year_view"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/synopsis"
                android:textColor="#000"/>

            <!-- Layout Get Data-->
            <TextView
                android:id="@+id/book_title_view"
                android:layout_toRightOf="@+id/book_image_view"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/title"
                android:gravity="center"
                android:textColor="#000"

                />

            <TextView
                android:id="@+id/book_type_text_view"
                android:layout_toRightOf="@+id/book_type_view"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/book_year_text_view"
                android:layout_toRightOf="@+id/book_year_view"
                android:layout_below="@+id/book_type_view"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/book_synopsis_text_view"
                android:layout_toRightOf="@+id/book_image_view"
                android:layout_below="@+id/book_synopsis_view"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"
                android:lines="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"/>

    </LinearLayout>
</LinearLayout>